[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Multiplayer/(Multi)Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player Sprite/playerandgun.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Multiplayer/(Multi)WeaponManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Multiplayer/(Multi)HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/BombItem/fakewall.png" type="Texture" id=5]
[ext_resource path="res://Sprites/BombItem/barrel.png" type="Texture" id=6]
[ext_resource path="res://Sprites/BombItem/hand_grenade.png" type="Texture" id=7]
[ext_resource path="res://Sprites/BombItem/redLandmine.png" type="Texture" id=8]
[ext_resource path="res://Scenes/GameScene/BulletManager.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60.4504, 61.8568 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.0334, 15.3959 )

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0352941, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0235294, 0, 0, 1 )
border_blend = true

[node name="Player" type="KinematicBody2D" groups=[
"Players",
]]
position = Vector2( 424.946, 297.935 )
z_index = 2
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 7.49542, 1.94446 )
scale = Vector2( 0.158, 0.144 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 89.96, -2.446, 249, 218.166 )

[node name="WeaponManager" parent="PlayerSprite" instance=ExtResource( 3 )]

[node name="TurnAxis" type="Position2D" parent="PlayerSprite"]
position = Vector2( 106.082, 22.3542 )
scale = Vector2( 6.32911, 6.94444 )

[node name="CastPoint" type="Position2D" parent="PlayerSprite/TurnAxis"]

[node name="CastBarricade" type="Position2D" parent="PlayerSprite"]
position = Vector2( 29.8132, 7.99199 )

[node name="CastArea" type="Area2D" parent="PlayerSprite/CastBarricade"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/CastBarricade/CastArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.71785, 1.95606 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 2.77216, -0.924164 )
scale = Vector2( -2.39789, 1.75916 )
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = 0
limit_top = 0
limit_right = 1340
limit_bottom = 750
limit_smoothed = true

[node name="weapon_GUI" type="Control" parent="."]
margin_left = -10.8954
margin_top = -17.1214
margin_right = 29.1046
margin_bottom = 22.8786
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon_name_Label" type="Label" parent="weapon_GUI"]
margin_left = -22.8745
margin_top = -35.1707
margin_right = 17.1255
margin_bottom = -21.1707
text = "name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon_ammo_Label" type="Label" parent="weapon_GUI"]
margin_left = 33.8978
margin_top = -35.9946
margin_right = 74.8978
margin_bottom = -21.9946
text = "ammo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_name_Label" type="Label" parent="."]
margin_left = -10.0359
margin_top = -66.9358
margin_right = 29.9641
margin_bottom = -52.9358
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletManager" type="Node2D" parent="."]
position = Vector2( 0.413544, 1.6542 )
scale = Vector2( 0.997358, 1.00698 )
script = ExtResource( 9 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -33.6599
margin_top = -40.0436
margin_right = 41.3401
margin_bottom = 4.95642

[node name="ItemGUI" type="CanvasLayer" parent="."]

[node name="GrenadePanel" type="Panel" parent="ItemGUI"]
margin_left = 1065.0
margin_top = 679.0
margin_right = 1141.0
margin_bottom = 755.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="ItemGUI/GrenadePanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 73.0
margin_bottom = 52.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreandeLabel" type="Label" parent="ItemGUI/GrenadePanel"]
margin_left = 1.0
margin_top = 57.0
margin_right = 74.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="LandminePanel" type="Panel" parent="ItemGUI"]
margin_left = 1141.23
margin_top = 679.175
margin_right = 1217.23
margin_bottom = 755.175
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="ItemGUI/LandminePanel"]
margin_left = 8.0
margin_top = 2.0
margin_right = 71.0
margin_bottom = 52.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LandmineLabel" type="Label" parent="ItemGUI/LandminePanel"]
margin_left = 1.0
margin_top = 57.0
margin_right = 74.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakewallPanel" type="Panel" parent="ItemGUI"]
margin_left = 1217.34
margin_top = 679.015
margin_right = 1293.34
margin_bottom = 755.015
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="ItemGUI/FakewallPanel"]
margin_left = 12.7008
margin_top = 3.68445
margin_right = 63.7008
margin_bottom = 53.6844
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakewallLabel" type="Label" parent="ItemGUI/FakewallPanel"]
margin_left = 1.0
margin_top = 57.0
margin_right = 74.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarrelPanel" type="Panel" parent="ItemGUI"]
margin_left = 1288.75
margin_top = 679.015
margin_right = 1364.75
margin_bottom = 755.015
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="ItemGUI/BarrelPanel"]
margin_left = 12.7008
margin_top = 3.68445
margin_right = 63.7008
margin_bottom = 53.6844
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarrelLabel" type="Label" parent="ItemGUI/BarrelPanel"]
margin_left = 1.0
margin_top = 57.0
margin_right = 74.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
